NM-1575A changes search header to bootstrap spans, fixes ui filters under the search fields on mobile, fulltext search 500 error, fix MP with service and product search , submit search with enter, queries with space fix

--- a/app/assets/stylesheets/layout/_form.css.scss
+++ b/app/assets/stylesheets/layout/_form.css.scss
@@ -35,7 +35,7 @@ input[type=tel] {
 }
 
 body.home-index, body.search-index {
-  input#search {
+  input.query {
     cursor: text;
   }
 }
